[gd_scene load_steps=3 format=3 uid="skills_menu_scene_1"]

[ext_resource path="res://scripts/ui/skills_menu.gd" type="Script" id=1]

[node name="SkillsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Title" type="Label" parent="VBox"]
text = "Навыки"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="KnownSkillsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxKnown" type="VBoxContainer" parent="VBox/HBox/KnownSkillsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="KnownLabel" type="Label" parent="VBox/HBox/KnownSkillsPanel/VBoxKnown"]
text = "Изученные навыки:"
theme_override_font_sizes/font_size = 18

[node name="ScrollContainer" type="ScrollContainer" parent="VBox/HBox/KnownSkillsPanel/VBoxKnown"]
layout_mode = 2

[node name="SkillsList" type="VBoxContainer" parent="VBox/HBox/KnownSkillsPanel/VBoxKnown/ScrollContainer"]
layout_mode = 2

[node name="ActiveSkillsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxActive" type="VBoxContainer" parent="VBox/HBox/ActiveSkillsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ActiveLabel" type="Label" parent="VBox/HBox/ActiveSkillsPanel/VBoxActive"]
text = "Активные навыки (5 слотов):"
theme_override_font_sizes/font_size = 18

[node name="ActiveSlots" type="VBoxContainer" parent="VBox/HBox/ActiveSkillsPanel/VBoxActive"]
layout_mode = 2

[node name="PassiveSkillsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxPassive" type="VBoxContainer" parent="VBox/HBox/PassiveSkillsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PassiveLabel" type="Label" parent="VBox/HBox/PassiveSkillsPanel/VBoxPassive"]
text = "Пассивные навыки (3 слота):"
theme_override_font_sizes/font_size = 18

[node name="PassiveSlots" type="VBoxContainer" parent="VBox/HBox/PassiveSkillsPanel/VBoxPassive"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

